--- a/package.json
+++ b/package.json
@@ -10,7 +10,145 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "devDependencies": {
+    "@angular-devkit/build-angular": "19.0.6",
+    "@angular-devkit/core": "19.0.6",
+    "@angular-devkit/schematics": "19.0.6",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/cli": "~19.0.0",
+    "@angular/compiler-cli": "19.0.5",
+    "@angular/language-service": "19.0.5",
+    "@brakebein/prisma-generator-nestjs-dto": "^1.24.0-beta5",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@nestjs-mod/schematics": "^2.12.2",
+    "@nestjs-mod/testing": "2.17.2",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.15",
+    "@nx/angular": "20.3.0",
+    "@nx/devkit": "20.3.0",
+    "@nx/eslint": "20.3.0",
+    "@nx/eslint-plugin": "20.3.0",
+    "@nx/jest": "20.3.0",
+    "@nx/js": "20.3.0",
+    "@nx/node": "20.3.0",
+    "@nx/playwright": "20.3.0",
+    "@nx/web": "20.3.0",
+    "@nx/webpack": "20.3.0",
+    "@nx/workspace": "20.3.0",
+    "@openapitools/openapi-generator-cli": "^2.15.3",
+    "@playwright/test": "^1.48.2",
+    "@schematics/angular": "19.0.6",
+    "@swc-node/register": "~1.10.9",
+    "@swc/core": "~1.9.2",
+    "@swc/helpers": "~0.5.15",
+    "@theunderscorer/nx-semantic-release": "^2.12.0",
+    "@types/jest": "29.5.13",
+    "@types/lodash": "^4.17.10",
+    "@types/node": "~18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/utils": "^7.16.0",
+    "autoprefixer": "^10.4.0",
+    "browser-sync": "^3.0.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-playwright": "^0.15.3",
+    "fast-glob": "^3.3.2",
+    "husky": "^9.1.6",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jest-preset-angular": "14.4.2",
+    "jsonc-eslint-parser": "^2.1.0",
+    "lint-staged": "^15.2.10",
+    "ng-packagr": "19.0.1",
+    "nx": "20.3.0",
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
+    "prettier": "^2.6.2",
+    "prisma": "^5.22.0",
+    "rucken": "^4.13.1",
+    "string-replace-loader": "3.1.0",
+    "tailwindcss": "^3.4.15",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "5.6.3",
+    "verdaccio": "^5.0.4",
+    "pg-flyway": "1.0.1"
+  },
   "dependencies": {
-    "express": "^4.21.2"
+    "@supabase/supabase-js": "2.47.10",
+    "@angular/animations": "19.0.5",
+    "@angular/common": "19.0.5",
+    "@angular/compiler": "19.0.5",
+    "@angular/core": "19.0.5",
+    "@angular/forms": "19.0.5",
+    "@angular/platform-browser": "19.0.5",
+    "@angular/platform-browser-dynamic": "19.0.5",
+    "@angular/platform-server": "19.0.5",
+    "@angular/router": "19.0.5",
+    "@angular/ssr": "19.0.6",
+    "@authorizerdev/authorizer-js": "^2.0.3",
+    "@faker-js/faker": "^9.2.0",
+    "@jsverse/transloco": "^7.5.0",
+    "@jsverse/transloco-keys-manager": "^6.0.0",
+    "@jsverse/transloco-locale": "^7.0.1",
+    "@jsverse/transloco-messageformat": "^7.0.1",
+    "@nestjs-mod/authorizer": "^1.5.0",
+    "@nestjs-mod/keyv": "1.1.0",
+    "@keyv/redis": "4.2.0",
+    "@keyv/postgres": "2.0.4",
+    "@nestjs-mod/common": "2.17.2",
+    "@nestjs-mod/docker-compose": "^1.17.0",
+    "@nestjs-mod/pg-flyway": "^1.0.2",
+    "@nestjs-mod/minio": "^1.4.0",
+    "@nestjs-mod/pino": "1.15.0",
+    "@nestjs-mod/pm2": "1.13.0",
+    "@nestjs-mod/prisma": "^1.11.0",
+    "@nestjs-mod/reports": "2.17.2",
+    "@nestjs-mod/terminus": "1.14.0",
+    "@nestjs/axios": "^3.1.3",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/platform-ws": "^10.4.15",
+    "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/swagger": "^8.1.1",
+    "@nestjs/terminus": "^10.2.3",
+    "@nestjs/websockets": "^10.4.15",
+    "@ngneat/until-destroy": "^10.0.0",
+    "@ngx-formly/core": "^6.3.12",
+    "@ngx-formly/ng-zorro-antd": "^6.3.12",
+    "@prisma/client": "^5.22.0",
+    "ajv": "^8.17.1",
+    "axios": "^1.7.7",
+    "case-anything": "^2.1.13",
+    "class-transformer": "^0.5.1",
+    "class-transformer-global-storage": "0.4.1-1",
+    "class-validator": "^0.14.1",
+    "class-validator-multi-lang": "^0.140.1",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "env-var": "^7.5.0",
+    "express": "~4.21.1",
+    "lodash": "^4.17.21",
+    "minio": "^8.0.2",
+    "nestjs-minio": "^2.6.2",
+    "nestjs-pino": "^4.1.0",
+    "nestjs-translates": "^2.0.1",
+    "ng-zorro-antd": "^19.0.0",
+    "pino-http": "^10.3.0",
+    "pino-pretty": "^13.0.0",
+    "pm2": "^5.4.3",
+    "redis": "^4.7.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "tslib": "^2.3.0",
+    "wait-on": "^8.0.1",
+    "zone.js": "0.15.0"
   }
 }
